plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.agent'
version = '0.1.0'
sourceCompatibility = '21'

application {
    mainClass = 'com.agent.cli.AgentCommand'
}

repositories {
    mavenCentral()
}

dependencies {
    // ── CLI ──────────────────────────────────────────────
    implementation 'info.picocli:picocli:4.7.5'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
    implementation 'org.jline:jline:3.25.1'

    // ── LangChain4j (AI + Tools + Memory) ───────────────
    implementation 'dev.langchain4j:langchain4j:0.35.0'
    implementation 'dev.langchain4j:langchain4j-anthropic:0.35.0'
    implementation 'dev.langchain4j:langchain4j-open-ai:0.35.0'
    implementation 'dev.langchain4j:langchain4j-ollama:0.35.0'

    // ── AST / Code Analysis ──────────────────────────────
    implementation 'com.github.javaparser:javaparser-core:3.25.9'
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.9'

    // ── Git ──────────────────────────────────────────────
    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.8.0.202311291450-r'

    // ── JSON / Config ────────────────────────────────────
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1'

    // ── Logging ──────────────────────────────────────────
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'ch.qos.logback:logback-classic:1.5.6'

    // ── Utils ────────────────────────────────────────────
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'commons-io:commons-io:2.16.1'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // ── Testing ──────────────────────────────────────────
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Fat JAR: java -jar agent.jar "..."
shadowJar {
    archiveBaseName.set('agent')
    archiveVersion.set('')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'com.agent.cli.AgentCommand'
    }
}

compileJava.options.compilerArgs += ['-Aproject=${project.group}/${project.name}']
